--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Trunk Template</title>
-    <link data-trunk rel="sass" href="index.scss" />
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Rust template app</title>
+  <link data-trunk rel="sass" href="index.scss" />
+</head>
+
+<body></body>
+
 </html>
